# MacroStudio

./: .gitignore  MacroStudio.spec  README.md  castledefendermacro.py  engine.py  gui.py  gui_main.py  macro_worker.py  macrocreator.py  main.py  overlay.py  pyproject.toml  requirements.txt  task_controller.py  types_and_enums.py  utils.py  variable_config.py
.github/workflows/: build_exe.yml
Examples/: basic_macro.py  hard_pause_macro.py  interrupt_pause_macro.py  threaded_macro.py
macro_creator/: __init__.py  actions.py  capture_type_registry.py  engine.py  gui_main.py  macro_worker.py  overlay.py  pause_state.py  profile_manager.py  task_controller.py  theme_manager.py  type_handler.py  types_and_enums.py  utils.py  variable_config.py
macro_creator/core/: capture_type_registry.py  engine.py  input_recorder.py  logger.py  macro_worker.py  task_controller.py  task_manager.py  timeline_handler.py  type_handler.py  types_and_enums.py  variable_config.py
macro_creator/core/controllers/: capture_type_registry.py  task_controller.py
macro_creator/core/data/: __init__.py  profile.py  task_store.py  timeline_handler.py  variable_config.py  (+1 more)
macro_creator/templates/: style_template.qss
macro_creator/ui/: main_window.py  overlay.py  shared.py  theme_manager.py
macro_engine/: overlay.py  task_controller.py  types_and_enums.py
macro_studio/: __init__.py  actions.py  main.py  vision.py
macro_studio/api/: task_context.py  thread_context.py
macro_studio/core/: types_and_enums.py
macro_studio/ui/: main_window.py  overlay.py  shared.py  theme_manager.py
(+65 files in other folders)
